tests/algorithms/x/Java/data_structures/binary_tree/avl_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:13: error: incompatible types: int cannot be converted to BigInteger
            return 0;
                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:26: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("height"))] = my_max(new java.math.BigInteger(String.valueOf(get_height(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left"))))))), new java.math.BigInteger(String.valueOf(get_height(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))))))).add(java.math.BigInteger.valueOf(1));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:26: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("height"))] = my_max(new java.math.BigInteger(String.valueOf(get_height(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left"))))))), new java.math.BigInteger(String.valueOf(get_height(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))))))).add(java.math.BigInteger.valueOf(1));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:31: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = ((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(left)).longValue())])).get("right"));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:31: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = ((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(left)).longValue())])).get("right"));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:32: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(left)).longValue())][(int)((long)("right"))] = i;
                                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:32: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(left)).longValue())][(int)((long)("right"))] = i;
                                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:40: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = ((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(right)).longValue())])).get("left"));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:40: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = ((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(right)).longValue())])).get("left"));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:41: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(right)).longValue())][(int)((long)("left"))] = i;
                                                                      ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:41: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(right)).longValue())][(int)((long)("left"))] = i;
                                                         ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:48: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = left_rotation(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:48: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = left_rotation(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:53: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = right_rotation(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:53: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = right_rotation(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:62: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = insert_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))), new java.math.BigInteger(String.valueOf(value)));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:62: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = insert_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))), new java.math.BigInteger(String.valueOf(value)));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:71: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = insert_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(value)));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:71: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = insert_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(value)));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:97: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))), new java.math.BigInteger(String.valueOf(value)));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:97: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("left"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("left")))), new java.math.BigInteger(String.valueOf(value)));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:99: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(value)));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:99: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(value)));
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:102: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("data"))] = temp_1;
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:102: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("data"))] = temp_1;
                                                     ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:103: error: incompatible types: String cannot be converted to long
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(temp_1)));
                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java:103: error: array required, but Map<String,BigInteger> found
nodes[(int)(((java.math.BigInteger)(i)).longValue())][(int)((long)("right"))] = del_node(new java.math.BigInteger(String.valueOf(((java.math.BigInteger)(((java.util.Map)nodes[(int)(((java.math.BigInteger)(i)).longValue())])).get("right")))), new java.math.BigInteger(String.valueOf(temp_1)));
                                                     ^
Note: /tmp/TestJavaTranspiler_Algorithms_Golden171_avl_tree2291017455/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
